--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-dotenv": "^3.4.7",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-swiper": "^1.6.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
