--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.4",
+    "@react-navigation/material-top-tabs": "^6.6.0",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.10",
     "@react-navigation/stack": "^6.3.12",
@@ -21,9 +22,11 @@
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-dotenv": "^3.4.7",
+    "react-native-pager-view": "^6.1.4",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-swiper": "^1.6.0",
+    "react-native-tab-view": "^3.5.0",
     "react-query": "^3.39.3",
     "styled-components": "^5.3.6"
   },
