--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^3.5.0",
     "react-query": "^3.39.3",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "expo-linear-gradient": "~12.0.1",
+    "expo-blur": "~12.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
