--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@react-navigation/stack": "^6.3.12",
     "expo": "~47.0.12",
     "expo-asset": "~8.7.0",
+    "expo-blur": "~12.0.1",
     "expo-font": "~11.0.1",
+    "expo-linear-gradient": "~12.0.1",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
+    "expo-web-browser": "~12.0.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-dotenv": "^3.4.7",
@@ -28,9 +31,7 @@
     "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^3.5.0",
     "react-query": "^3.39.3",
-    "styled-components": "^5.3.6",
-    "expo-linear-gradient": "~12.0.1",
-    "expo-blur": "~12.0.1"
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
